tooling/nargo_cli/tests/snapshots/execution_failure/lambda_from_empty_array/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
bug: Assertion is always false: Index out of bounds
  ┌─ src/main.nr:4:13
  │
4 │     let _ = lambdas[0]((0));
  │             ---------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1. src/main.nr:4:13

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:4:13
  │
4 │     let _ = lambdas[0]((0));
  │             ----------
  │
  = Call stack:
    1. src/main.nr:4:13

Failed assertion
