tooling/nargo_cli/tests/snapshots/execution_failure/lambda_from_empty_array/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:4:13
  │
4 │     let _ = lambdas[0]((0));
  │             ----------
  │
  = Call stack:
    1: main
            at src/main.nr:4:13

Failed assertion
