tooling/nargo_cli/tests/snapshots/execution_failure/lambda_from_empty_array/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: 0 is out of bounds for the array of length 0
  ┌─ src/main.nr:4:13
  │
4 │     let _ = lambdas[0]((0));
  │             ----------
  │

Error interpreting main function
